specs/020-map-set-tuples/examples/invalid/unknown-method.ts
let m: Map<string, int> = new Map<string, int>();
m.clear();
